--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,20 @@ set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build, options are: 
 # Project information
 project(TestWutils CXX)
 
-# Set the required C++ standard to C++23.
-set(CMAKE_CXX_STANDARD 23)
+# Set the required C++ standard.
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add compiler-specific flags.
+# Add compiler-specific flags
 if(MSVC)
-    # MSVC (nmake) specific flags
     set(CMAKE_CXX_FLAGS "/W4 /WX /EHsc /utf-8")
     set(CMAKE_CXX_FLAGS_DEBUG "/Od /Zi")
+    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
 elseif(UNIX)
-    # GNU Make specific flags
     set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -march=native")
     set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 endif()
 
 # Define the source files
