--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 4.2.2)
 project(Wutils CXX)
 add_library(wutils STATIC)
-target_include_directories(wutils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(wutils
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
 option(USE_WUTILS_MODULE "Enable WUtils module support" OFF)
 if(USE_WUTILS_MODULE)
     target_sources(wutils
@@ -18,7 +22,6 @@ if(NOT CMAKE_CROSSCOMPILING)
     pkg_check_modules(GTEST REQUIRED IMPORTED_TARGET gtest)
     add_executable(testwutils tests/testwutils.cpp)
     target_link_libraries(testwutils PRIVATE wutils PkgConfig::GTEST)
-    target_include_directories(testwutils PRIVATE ${DOCTEST_INCLUDES})
     enable_testing()
     add_test(NAME testwutils COMMAND testwutils)
 endif()
